# sqltools_mcp

./: LICENSE  README.md  README_EN.md  SECURITY.md  pyproject.toml  requirements.txt
src/sqltools_mcp/: __init__.py  config.py  connection_manager.py  server.py
src/sqltools_mcp/adapters/: __init__.py  base.py  dm8.py  factory.py  mssql.py  mysql.py  postgres.py  sqlite.py
